--- a/NUCLEO-F767ZI_OV2640_ILI9486.ioc
+++ b/NUCLEO-F767ZI_OV2640_ILI9486.ioc
@@ -45,43 +45,56 @@ Mcu.IP2=DMA
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
-Mcu.Pin10=PB0
-Mcu.Pin11=PG0
-Mcu.Pin12=PG1
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG6
-Mcu.Pin17=PG7
-Mcu.Pin18=PC6
-Mcu.Pin19=PC7
+Mcu.Pin10=PC3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA6
+Mcu.Pin13=PB0
+Mcu.Pin14=PB2
+Mcu.Pin15=PF14
+Mcu.Pin16=PF15
+Mcu.Pin17=PG0
+Mcu.Pin18=PG1
+Mcu.Pin19=PE7
 Mcu.Pin2=PE6
-Mcu.Pin20=PC8
-Mcu.Pin21=PC9
-Mcu.Pin22=PA8
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PD3
-Mcu.Pin26=PG9
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=PB9
+Mcu.Pin20=PE8
+Mcu.Pin21=PE11
+Mcu.Pin22=PB10
+Mcu.Pin23=PB14
+Mcu.Pin24=PD8
+Mcu.Pin25=PD9
+Mcu.Pin26=PD13
+Mcu.Pin27=PG6
+Mcu.Pin28=PG7
+Mcu.Pin29=PC6
 Mcu.Pin3=PC13
-Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin30=PC7
+Mcu.Pin31=PC8
+Mcu.Pin32=PC9
+Mcu.Pin33=PA8
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PD3
+Mcu.Pin37=PG9
+Mcu.Pin38=PB7
+Mcu.Pin39=PB8
 Mcu.Pin4=PC14/OSC32_IN
+Mcu.Pin40=PB9
+Mcu.Pin41=VP_SYS_VS_Systick
 Mcu.Pin5=PC15/OSC32_OUT
-Mcu.Pin6=PH0/OSC_IN
-Mcu.Pin7=PH1/OSC_OUT
-Mcu.Pin8=PA4
-Mcu.Pin9=PA6
-Mcu.PinsNb=31
+Mcu.Pin6=PF4
+Mcu.Pin7=PH0/OSC_IN
+Mcu.Pin8=PH1/OSC_OUT
+Mcu.Pin9=PC2
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -125,10 +138,16 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=TP_BUSY
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
@@ -152,6 +171,11 @@ PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.Locked=true
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
 PC7.Mode=Slave_8_bits_External_Synchro
@@ -160,6 +184,10 @@ PC8.Mode=Slave_8_bits_External_Synchro
 PC8.Signal=DCMI_D2
 PC9.Mode=Slave_8_bits_External_Synchro
 PC9.Signal=DCMI_D3
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=SD_CS
+PD13.Locked=true
+PD13.Signal=GPIO_Output
 PD3.Mode=Slave_8_bits_External_Synchro
 PD3.Signal=DCMI_D5
 PD8.GPIOParameters=GPIO_Label
@@ -172,12 +200,33 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE11.Signal=S_TIM1_CH2
 PE4.Mode=Slave_8_bits_External_Synchro
 PE4.Signal=DCMI_D4
 PE5.Mode=Slave_8_bits_External_Synchro
 PE5.Signal=DCMI_D6
 PE6.Mode=Slave_8_bits_External_Synchro
 PE6.Signal=DCMI_D7
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=TP_IRQ
+PE7.Locked=true
+PE7.Signal=GPIO_Input
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=TP_CS
+PE8.Locked=true
+PE8.Signal=GPIO_Output
+PF14.GPIOParameters=GPIO_Label
+PF14.GPIO_Label=LCD_CS
+PF14.Locked=true
+PF14.Signal=GPIO_Output
+PF15.GPIOParameters=GPIO_Label
+PF15.GPIO_Label=LCD_RST
+PF15.Locked=true
+PF15.Signal=GPIO_Output
+PF4.GPIOParameters=GPIO_Label
+PF4.GPIO_Label=LCD_DC
+PF4.Locked=true
+PF4.Signal=GPIO_Output
 PG0.GPIOParameters=GPIO_Label
 PG0.GPIO_Label=CAMERA_RESET
 PG0.Locked=true
@@ -209,7 +258,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -232,7 +281,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_DCMI_Init-DCMI-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_DCMI_Init-DCMI-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -323,6 +372,19 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SPI2.CalculateBaudRate=26.25 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,NSSPMode
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.NSSPMode=SPI_NSS_PULSE_DISABLE
+SPI2.VirtualType=VM_MASTER
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
+TIM1.Period=2160-1
+TIM1.Prescaler=1000-1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
